--- a/css/general.css
+++ b/css/general.css
@@ -1,7 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
-    font-family: Impact, serif;
+    font-family: "Arial Black", serif;
 }
 
 .container {
