--- a/css/accountCreate.css
+++ b/css/accountCreate.css
@@ -1,22 +1,25 @@
-.menu {
-    margin-bottom: 40px;
-    margin-top: 10px;
-}
-
-h2 {
+#logo {
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-
+    top: 20px;
+    width: 15vw;
+    height: 15vw;
 }
 
-.container {
+h1 {
     display: flex;
-    justify-content: start;
     align-items: center;
-    margin: 2vh auto;
-    width: 98vw;
-    height: 96vh;
+    justify-content: center;
+    font-size: 4vh;
+    height: 30%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+    align-items: center;
+    margin: 0.5vh auto;
     border-radius: 20px;
     background-color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
@@ -25,11 +28,13 @@ h2 {
 
 #register {
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 75vh;
+    height: 70%;
     flex-direction: column;
+    padding-bottom: 10vh;
+
 }
 
 #regForm {
@@ -37,55 +42,22 @@ h2 {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: 10px;
 }
 
-#regForm input, #regForm textarea {
+#regForm input {
     background-color: #E5E5E5;
-    height: 25px;
-    border-radius: 8px;
+    height: 7vh;
+    width: 100%;
+    font-size: 3vh;
+    border-radius: 100px;
     border: none;
-    padding-left: 6px;
+    padding-left: 40px;
     margin: 5px 0;
     text-align: justify;
 }
 
-#regForm textarea {
-    resize: none;
-    width: 80%;
-    height: 40px;
-    overflow: hidden;
-}
-
-#regProfilePic {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 200px;
-    background-color: white;
-    height: 200px;
-    border: 2px solid #cbcbcb;
-    border-radius: 50%;
-    margin-bottom: 40px;
-}
-
-input[type="file"] {
-    display: none;
-}
-
-.custom-file-upload {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: xx-large;
-    font-weight: bolder;
-    background-color: #E5E5E5;
-    border-radius: 200%;
-    cursor: pointer;
-    width: 46px;
-    height: 46px;
+#timestampHidden {
+    visibility: collapse;
 }
 
 .button {
@@ -93,63 +65,19 @@ input[type="file"] {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 120px;
-    height: 40px;
+    font-size: 3vh;
+    color: white;
+    width: 40vw;
+    height: 7vh;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 20px;
-    margin-bottom: 20px;
+    border-radius: 100px;
+}
+#logo {
+    width: 15vw;
+    height: 15vw;
 }
 
-input {
-    margin-top: 20px;
-    width: 80%;
-}
 
-@media screen and (max-aspect-ratio: 12/16) {
-
-    #logo {
-        width: 8vw;
-        height: 8vw;
-    }
-
-    #title {
-        font-size: 3rem;
-    }
-
-    #regProfilePic {
-        /*height: 30vw;*/
-        /*width: 30vw;*/
-        margin-bottom: 60px;
-    }
-
-    .custom-file-upload {
-        height: 8vw;
-        width: 8vw;
-    }
-
-    .button {
-        height: 8vh;
-        width: 20vw;
-        font-size: 2vh;
-        border-radius: 250px;
-    }
-
-    #regForm {
-        width: 100%;
-        margin-bottom: 40px;
-    }
-
-    #regForm input, #regForm textarea {
-        height: 90px;
-        margin-top: 10px;
-        font-size: 2vh;
-        border-radius: 15px;
-        padding: 5px 15px;
-    }
-
-    #regForm textarea {
-        width: 80%;
-        height: 120px;
-    }
+@media screen and (min-aspect-ratio: 16/12) {
 
 }
