--- a/css/general.css
+++ b/css/general.css
@@ -1,11 +1,11 @@
 * {
     box-sizing: border-box;
+    font-family: "Arial", serif;
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-family: "Arial Black", serif;
 }
 
 .container {
@@ -28,4 +28,28 @@ body {
     justify-content: space-between;
     align-items: center;
     align-content: flex-end;
+}
+
+.mainMobileButton {
+    background-color: #c4c4c4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3vh;
+    color: white;
+    width: 40vw;
+    height: 7vh;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 100px;
+}
+
+.mainMobileInput {
+    background-color: #E5E5E5;
+    padding: 2vh 3vh;
+    width: 100%;
+    font-size: 3vh;
+    border-radius: 100px;
+    border: none;
+    margin: 5px 0;
+    text-align: justify;
 }
