--- a/css/projectUpload.css
+++ b/css/projectUpload.css
@@ -1,3 +1,16 @@
+.container {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: 0.5vh auto;
+    width: 99vw;
+    height: 99vh;
+    border-radius: 20px;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+    max-width: none;
+}
+
 .projectUpload {
     width: 100%;
     display: flex;
