--- a/css/general.css
+++ b/css/general.css
@@ -1,18 +1,19 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Impact, serif;
+    font-family: Arial, serif;
 }
 
 .container {
     padding-left: 0.5em;
     padding-right: 0.5em;
-    max-width: 30em;
+    max-width: 100%;
+    max-height: 100%;
     margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: grey;
+    background-color: white;
 }
 
 .menu {
