--- a/css/home.css
+++ b/css/home.css
@@ -1,35 +1,86 @@
-
-#logo {
-    width: 48px;
-    height: 48px;
+body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
-#profilePic {
-    width: 48px;
-    height: 48px;
+.menuButton {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 10vw;
+    width: 10vw;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 5px;
 }
+
+
+.bar {
+    width: 80%;
+    height: 7%;
+    background-color: black;
+    margin: 6px 0;
+    border-radius: 20px;
+}
+
+.menuTopRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menuMobile {
+    height: 10vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: 10px
+}
+
+#logo #profilePic {
+    width: 10vw;
+    height: 10vw;
+}
+
 
 #searchBar {
     text-align: center;
+    height: 40px;
     width: 90%;
     border-radius: 10px;
+    align-self: center;
 }
 
-#tags {
-    width: 100%;
-    padding: 0;
-    list-style-type: none;
+.scrollmenu {
     display: flex;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+    white-space: nowrap;
+    height: 60px;
+    font-size: 1.8rem;
 }
 
-#tags li {
-    border: 1px solid black;
-    margin-left: 2px;
-    margin-right: 2px;
-    padding: 5px;
-    border-radius: 10px;
+.scrollmenu input {
+    display: none;
+    height: 100%;
 }
+
+label {
+    margin: 10px;
+    padding: 10px 15px;
+    background: darkgray;
+    border-radius: 50px;
+}
+
+label:focus {
+    background-color: deeppink;
+    color: white;
+}
+
 
 .projects {
     width: 100%;
@@ -43,7 +94,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     list-style-type: none;
     padding: 0;
 }
@@ -53,10 +104,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 300px;
     border: 1px solid black;
-    margin: 2px;
+    margin: 15px 0;
     border-radius: 10px;
 }
 
