--- a/css/userLogin.css
+++ b/css/userLogin.css
@@ -1,36 +1,51 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .forms {
     width: 100%;
-    margin: 15%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-div {
-    margin-top: 10px;
+#logo {
+    position: absolute;
+    top: 20px;
+    width: 15vw;
+    height: 15vw;
+}
+h1 {
+    font-size: 4vh;
+}
+#login {
+    width: 90%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-input {
-    height: 40px;
-    font-size: x-large;
-    text-align: center;
-    margin-top: 10px;
-    border-radius: 20px;
+a, a:visited{
+    margin-top: 20px;
+    font-size: 2vh;
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    color: cornflowerblue;
 }
 
 button {
-    font-size: x-large;
-    text-align: center;
-    margin-bottom: 10px;
-    border-radius: 20px;
+    margin: 2vh 0;
 }
 
-.notUser {
-    width: 75%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+@media screen and (max-aspect-ratio: 16/12) {
+
 }
