--- a/css/home.css
+++ b/css/home.css
@@ -1,16 +1,21 @@
 body {
     max-width: 100%;
     overflow-x: hidden;
+    background-color: rgba(1, 4, 9, 0.06);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3vw;
 }
 
-.menuButton {
+.logo-container {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     height: 10vw;
     width: 10vw;
-    border: 2px solid black;
+    border: 2px solid lightgray;
     border-radius: 10px;
     padding: 5px;
 }
@@ -18,8 +23,9 @@ body {
 
 .bar {
     width: 80%;
-    height: 7%;
+    height: 5%;
     background-color: black;
+    opacity: 70%;
     margin: 6px 0;
     border-radius: 20px;
 }
@@ -32,7 +38,7 @@ body {
 }
 
 .menuMobile {
-    height: 10vh;
+    height: 15vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -40,33 +46,47 @@ body {
     margin: 10px
 }
 
-#logo #profilePic {
+#logo {
     width: 10vw;
     height: 10vw;
+}
+
+#profilePic {
+    height: 80%;
+    width: 80%;
+    opacity: 70%;
 }
 
 
 #searchBar {
     text-align: center;
-    height: 40px;
-    width: 90%;
-    border-radius: 10px;
+    height: 5vh;
+    width: 100%;
+    border-radius: 100px;
+    border: none;
     align-self: center;
+    font-size: 2vh;
+    margin: 0.5vh 0;
 }
 
 .scrollmenu {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: auto;
-    white-space: nowrap;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
     height: 60px;
     font-size: 1.8rem;
 }
 
-.scrollmenu input {
+.scrollmenu::-webkit-scrollbar {
     display: none;
+}
+
+.scrollmenu input {
     height: 100%;
+    flex: 0 0 auto;
 }
 
 label {
@@ -94,21 +114,53 @@ label:focus {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     list-style-type: none;
     padding: 0;
 }
 
-#projectCard {
+.project-card {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    width: 250px;
-    height: 300px;
-    border: 1px solid black;
+    justify-content: start;
+    width: 27vw;
+    height: 24vh;
     margin: 15px 0;
-    border-radius: 10px;
+    padding: 0;
+    border-radius: 40px;
+    background-color: white;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+}
+
+.project-card:hover {
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+}
+
+.project-card-fig {
+    background: #c4c4c4;
+    border-radius: 40px 40px 0 0;
+    width: 27vw;
+    height: 27vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+}
+
+.project-card-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.project-card-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 8.5vh;
+    font-size: 1.5vh;
+    padding: 0 2vw;
 }
 
 img {
@@ -134,4 +186,17 @@ a, a:hover, a:visited, a:active {
     color: black;
     align-self: center;
     margin-bottom: 5px;
+}
+
+#load-more {
+    font-size: 2vh;
+    border: 1px solid lightgray;
+    background: white;
+    border-radius: 100px;
+    padding: 0.5vh 1vh;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+}
+
+#load-more:active {
+    box-shadow: none;
 }
