--- a/css/projectUpload.css
+++ b/css/projectUpload.css
@@ -1,32 +1,147 @@
-.container {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    margin: 0.5vh auto;
-    width: 99vw;
-    height: 99vh;
-    border-radius: 20px;
-    background-color: white;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-    max-width: none;
+body {
+    max-width: 100%;
 }
 
-.projectUpload {
+.menuButton {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 10vw;
+    width: 10vw;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.menuMobile {
+    height: 10vh;
     width: 100%;
     display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: 10px
+}
+
+.menuTopRow {
+    display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin-bottom: 50px;
+    justify-content: space-between;
+    align-items: center;
 }
 
-#uploadLeft {
-    display: flex;
-    flex-direction: column;
-    align-content: space-between;
+.bar {
+    width: 80%;
+    height: 7%;
+    background-color: black;
+    margin: 6px 0;
+    border-radius: 20px;
 }
 
-#uploadRight {
+#logo #profilePic {
+    width: 10vw;
+    height: 10vw;
+}
+
+#regProjectPic, #projectVideo, #projectPictures, #projectPictures2{
+    align-self: center;
     display: flex;
     flex-direction: column;
-    align-content: space-between;
+    align-items: center;
+    justify-content: center;
+    height: 35vw;
+    width: 35vw;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 40px;
+}
+
+#projectVideo, #projectPictures {
+    width: 95%;
+    height: 45vw;
+}
+
+h3 {
+    margin-left: 5%;
+    font-size: 2rem;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 7vw;
+    background-color: #E5E5E5;
+    border-radius: 200%;
+    cursor: pointer;
+    width: 10vw;
+    height: 10vw;
+}
+
+#uploadDetails {
+    padding-top: 20px;
+    margin: auto;
+    width: 95%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+#projectName {
+    margin-top: 40px;
+}
+
+#shortDescTextArea {
+    resize: none;
+    border-radius: 50px;
+    width: 95%;
+    height: 12vh;
+    overflow: hidden;
+}
+
+.mainMobileInput {
+    width: 95%;
+    align-self: center;
+    margin: 10px 0 10px 0;
+}
+
+#longDescTextArea {
+    margin: 40px 0;
+    height: 60vw;
+    text-align: left;
+    border-radius: 20px;
+}
+
+#uploadMedia {;
+    margin: auto;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
+input {
+    width: 100%;
+    font-size: xx-large;
+    text-align: center;
+}
+
+img {
+    width: 125px;
+    height: 125px;
+    margin-top: 3px;
+}
+
+button {
+    margin: auto;
 }
