--- a/css/projectDetails.css
+++ b/css/projectDetails.css
@@ -1,6 +1,82 @@
-.projectDetails {
+body {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#app-info-card {
+    background-color: white;
     width: 100%;
+    border-radius: 20px;
+    height: 25vh;
+    display: flex;
+    flex-direction: column;
+    padding: 1vh;
+}
+
+#card-top-row {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+}
+
+#card-logo {
+    width: 20vw;
+    height: 20vw;
+    border-radius: 20px;
+    margin-right: 3vw;
+}
+
+#card-details {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+#card-tags {
+    flex-grow: 1;
+}
+
+#card-bottom-row {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+#card-likes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#arrow-up, #arrow-down {
+    width: 50px;
+    height: 50px;
+}
+
+#card-like-count {
+    text-align: center;
+    font-size: 1.5vh;
+    margin: 10px 0;
+}
+
+h2, p {
+    margin: 0;
+}
+
+h2 {
+    font-size: 3vh;
+}
+
+p {
+    font-size: 2vh;
+}
+
+h5 {
+    font-size: 1.3vh;
+    margin: 1vh 0;
+}
+
+#projectShortDesc {
+    flex-grow: 1;
 }
