--- a/css/accountCreateExtra.css
+++ b/css/accountCreateExtra.css
@@ -81,6 +81,10 @@ input[type="file"] {
     margin-left: 10px;
 }
 
+.hidden-input {
+    visibility: collapse;
+}
+
 
 @media screen and (min-aspect-ratio: 16/12) {
 
@@ -121,5 +125,4 @@ input[type="file"] {
         width: 80%;
         height: 120px;
     }
-
 }
