--- a/css/projectUpload.css
+++ b/css/projectUpload.css
@@ -140,6 +140,39 @@ input[type="file"] {
     align-content: center;
 }
 
+#uploadedPictures {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 100%;
+}
+
+.uploaded-pic {
+    width: 43vw;
+    margin: 1vh 1vh;
+    height: auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: end;
+    object-fit: contain;
+}
+
+#uploaded-container {
+    display: flex;
+}
+
+#delete-image {
+    top: 5px;
+    right: 5px;
+    color: red;
+    font-size: 3vh;
+    z-index: 69000;
+}
+
 input {
     width: 100%;
     font-size: xx-large;
