--- a/css/myProfile.css
+++ b/css/myProfile.css
@@ -150,56 +150,106 @@ img {
 }
 
 #userProjects {
-    padding-inline-start: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
 
 }
 
 a, a:hover, a:visited, a:active {
     color: inherit;
     text-decoration: none;
+    z-index: 0;
 }
 
 #projectCard {
-    margin: 30px auto;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);
+    position: relative;
+    /*box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);*/
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    width: 95%;
-    height: 20vw;
-    border-radius: 20px;
+    width: 100%;
+    height: 15vh;
+    border-radius: 20px 0 0 20px ;
+    align-items: center;
 }
 
 #projectImg {
-    height: 20vw;
-    width: 20vw;
-    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    height: 15vh;
+    width: 15vh;
+    margin: 0;
+    align-items: center;
+    justify-content: start;
+}
+
+#projectImg img {
+    height: 100%;
+    width: 100%;
+    border-radius: 20px 0 0 20px;
+    margin: 0;
+    object-fit: cover;
+    background-position: center center;
 }
 
 #projectDetailDiv {
     height: 100%;
-    margin-left: 40px;
+    margin-left: 1vw;
     flex-grow: 1;
     padding: 8px 8px 16px 0;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
+}
 
+#editBtn {
+    background-color: lightgray;
+    /*box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);*/
+    border: 0 solid black;
+    border-radius: 0 20px 20px 0;
+    font-size: 2vh;
+    flex-grow: 1;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 #projectName {
+    align-self: flex-start;
+    justify-content: flex-start;
     font-weight: bold;
-    font-size: 2.8vw;
+    font-size: 2.8vh;
+    margin: 0 0 1vh 0;
 }
 
 #shortDesc {
-    font-size: 2vw;
+    font-size: 2vh;
     max-width: 80%;
-    text-align: justify;
+    margin: 0;
+    padding: 0 2vw 0 0;
+    flex-grow: 1;
 }
 
 #date {
-    align-self: flex-end;
-    font-size: 1.1rem;
-    margin-bottom: 15px;
+    font-size: 1.5vh;
+    margin-bottom: 1vh;
+    position: absolute;
+    bottom: 1vh;
+    right: 2vh;
+}
+
+#card-link {
+    width: 90%;
+}
+
+#project-card-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin: 1vh;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
 }
