update projects works + general.js + project details changes

--- a/css/projectUpload.css
+++ b/css/projectUpload.css
@@ -83,7 +83,7 @@ body {
     background-color: #bb0505;
 }
 
-#add-youtube-video {
+#check-youtube-video {
     margin-left: 2vw;
     width: 27%;
 }
