--- a/css/projectDetails.css
+++ b/css/projectDetails.css
@@ -5,48 +5,6 @@ body {
     align-items: center;
 }
 
-#projectDetails {
-    width: 100%;
-}
-
-#appOverview, #app-info-card {
-    background-color: white;
-    width: 100%;
-    border-radius: 20px;
-    min-height: 25vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding: 1vh;
-}
-
-#appOverviewTop {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-#nameAuthor {
-    width: 70%;
-}
-
-#appOverviewBottom {
-    margin-top: 40px;
-}
-
-#cardTags {
-    border: 1px solid black;
-    height: 4vh;
-}
-
-#shortDesc {
-    margin-top: 40px;
-    background-color: #E5E5E5;
-    border-radius: 20px;
-    padding: 15px 15px;
-    height: 20vw;
-}
-
 
 #card-top-row {
     display: flex;
@@ -110,6 +68,118 @@ h5 {
     margin: 1vh 0;
 }
 
+#projectDetails {
+    width: 100%;
+}
+
+#appOverview, #app-info-card {
+    background-color: white;
+    width: 100%;
+    border-radius: 20px;
+    min-height: 25vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 1vh;
+}
+
+#appOverviewTop {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#projectLogo {
+    width: 25%;
+    max-height: 100vh;
+    border-radius: 15px;
+}
+
+#nameAuthor {
+    margin: 0 10px;
+    width: 70%;
+}
+
+#nameAuthor p {
+    margin: 10px 0;
+}
+
+#appOverviewBottom {
+    margin-top: 40px;
+}
+
+#cardTags {
+    border: 1px solid black;
+    height: 4vh;
+}
+
+#shortDesc {
+    margin-top: 40px;
+    background-color: #E5E5E5;
+    border-radius: 20px;
+    padding: 15px 15px;
+    height: 20vw;
+    font-size: 4vw;
+}
+
 #projectShortDesc {
     flex-grow: 1;
+}
+
+#media{
+    margin-top: 20px;
+    background-color: white;
+    border-radius: 20px;
+    padding: 1vh;
+    display: flex;
+    justify-content: center;
+}
+
+#videoMedia, #imageMedia{
+    margin-top: 20px;
+    background-color: white;
+    border-radius: 20px;
+    padding: 1vh;
+    display: flex;
+    justify-content: space-between;
+    overflow-y: hidden;
+    overflow-x: auto;
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+#video {
+    width: 95vh;
+    height: 25vh;
+}
+
+#images {
+    width: 95vh;
+}
+
+.projectImg {
+    margin: 5px 10px;
+    width: 25vh;
+    height: 15vh;
+    border-radius: 15px;
+}
+
+#appLongDescription {
+    margin-top: 20px;
+    background-color: white;
+    border-radius: 20px;
+    padding: 1vh;
+}
+
+#appLongDescription p {
+    margin-top: 5px;
+    background-color: #E5E5E5;
+    border-radius: 20px;
+    padding: 15px 15px;
+    min-height: 30vw;
+    font-size: 4vw;
 }
