--- a/css/general.css
+++ b/css/general.css
@@ -121,8 +121,7 @@ body {
     background-color: #cbcbcb;
     height: 100vh;
     border-radius: 0 50px 50px 0;
-    visibility: hidden;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: start;
     overflow-x: hidden;
