--- a/css/projectDetails.css
+++ b/css/projectDetails.css
@@ -146,15 +146,20 @@ h5 {
     overflow-x: auto;
 }
 
+#videoMedia {
+    position: relative;
+    padding-bottom: 56.25%;
+    /*width: 95vh;*/
+    /*height: 25vh;*/
+}
+
 iframe {
+    position:absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     border-radius: 20px;
-}
-
-#video {
-    width: 95vh;
-    height: 25vh;
 }
 
 #images {
@@ -166,6 +171,7 @@ iframe {
     width: 25vh;
     height: 15vh;
     border-radius: 15px;
+    object-fit: contain;
 }
 
 #appLongDescription {
