--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,4 @@
 body {
-    max-width: 100%;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
@@ -42,7 +41,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
-    gap: 6vw;
+    gap: 5vw;
     list-style-type: none;
     padding: 0;
 }
@@ -52,10 +51,9 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    width: 27vw;
-    height: 24vh;
+    width: 28vw;
+    height: 43vw;
     margin: 15px 0;
-    padding: 0;
     border-radius: 40px;
     background-color: white;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
@@ -68,8 +66,8 @@ body {
 .project-card-fig {
     background: #c4c4c4;
     border-radius: 40px 40px 0 0;
-    width: 27vw;
-    height: 27vw;
+    width: 28vw;
+    height: 28vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -87,9 +85,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 8.5vh;
+    flex-grow: 1;
     font-size: 1.5vh;
     padding: 0 2vw;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 a, a:hover, a:visited, a:active {
