--- a/css/projectDetails.css
+++ b/css/projectDetails.css
@@ -5,6 +5,35 @@ body {
     align-items: center;
 }
 
+.menuMobile {
+    height: auto;
+    justify-content: start;
+    margin-bottom: 2vh;
+}
+
+.user {
+    background-color: white;
+    margin-top: 2vw;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#github, #userImg {
+    background-color: white;
+    height: 20vw;
+    width: 20vw;
+    border-radius: 50%;
+    background-position: center center;
+    object-fit: cover;
+}
+#userInfo {
+    font-size: 2vh;
+}
 
 #card-top-row {
     display: flex;
@@ -90,14 +119,21 @@ h5 {
 }
 
 #projectLogo {
-    width: 25%;
-    max-height: 100vh;
+    width: 20vw;
+    height: 20vw;
+    object-fit: cover;
     border-radius: 15px;
 }
 
 #nameAuthor {
-    margin: 0 10px;
+    padding: 0 10px;
     width: 70%;
+}
+
+#nameAuthor h2 {
+    font-size: 2vh;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #nameAuthor p {
