--- a/css/projectUpload.css
+++ b/css/projectUpload.css
@@ -18,11 +18,11 @@ body {
 }
 
 .menuMobile {
-    height: 10vh;
+    height: auto;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: start;
 }
 
 .menuTopRow {
@@ -45,7 +45,7 @@ body {
     height: 10vw;
 }
 
-#regProjectPic, #projectPictures, #projectPictures2 {
+#regProjectPic, #projectPictures2 {
     align-self: center;
     display: flex;
     flex-direction: column;
@@ -103,10 +103,11 @@ iframe{
 }
 
 #projectPictures {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
-    /*height: 45vw;*/
-    padding-top: 56.25%;
-    position: relative;
 }
 
 h3 {
@@ -119,10 +120,10 @@ input[type="file"] {
 }
 
 #projectPictures .custom-file-upload {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    background-color: #c4c4c4;
+    width: 30vw;
+    height: 15vw;
+    border-radius: 100px;
 }
 
 .hidden-input {
@@ -177,22 +178,19 @@ input[type="file"] {
 
 #uploadedPictures {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 30px;
     margin-bottom: 30px;
     width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .uploaded-pic {
-    width: 43vw;
-    margin: 1vh 1vh;
-    height: auto;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: end;
+    margin: 5px 2vw;
+    max-width: 90vw;
+    max-height: 60vw;
+    border-radius: 15px;
     object-fit: contain;
 }
 
@@ -212,12 +210,6 @@ input {
     width: 100%;
     font-size: xx-large;
     text-align: center;
-}
-
-img {
-    width: 125px;
-    height: 125px;
-    margin-top: 3px;
 }
 
 .buttons {
