--- a/css/accountCreateExtra.css
+++ b/css/accountCreateExtra.css
@@ -22,7 +22,7 @@ h2 {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 93%;
+    height: 100%;
     flex-direction: column;
 }
 
@@ -36,7 +36,6 @@ h2 {
 
 #descTextArea {
     resize: none;
-    border-radius: 50px;
     width: 100%;
     height: 12vh;
     overflow: hidden;
@@ -47,8 +46,8 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 55vw;
-    width: 55vw;
+    height: 30vh;
+    width: 30vh;
     background-color: white;
     border: 2px solid #cbcbcb;
     border-radius: 50%;
@@ -63,65 +62,40 @@ input[type="file"] {
     align-items: center;
     justify-content: center;
     color: white;
-    font-size: 7vw;
+    font-size: 6vh;
     background-color: #E5E5E5;
     border-radius: 200%;
     cursor: pointer;
-    width: 10vw;
-    height: 10vw;
+    width: 7vh;
+    height: 7vh;
 }
 #logo {
     position: absolute;
     top: 5px;
     left: 5px;
-    width: 15vw;
-    height: 15vw;
+    width: 15vh;
+    height: 15vh;
     margin-top: 10px;
     margin-left: 10px;
 }
 
 .hidden-input {
-    visibility: collapse;
+    display: none;
 }
 
 
-@media screen and (min-aspect-ratio: 16/12) {
+@media screen and (min-aspect-ratio: 1/1) {
 
-
-    #title {
-        font-size: 3rem;
+    body {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 90vh;
+        width: 850px;
+        margin: auto;
+        border-radius: 20px;
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);
     }
 
-    #regProfilePic {
-        margin-bottom: 60px;
-    }
-
-    .custom-file-upload {
-        height: 8vw;
-        width: 8vw;
-    }
-
-    .button {
-        padding: 20px 100px;
-        font-size: 2vh;
-        border-radius: 250px;
-    }
-
-    #regForm {
-        width: 100%;
-        margin-bottom: 40px;
-    }
-
-    #regForm input, #regForm textarea {
-        height: 90px;
-        margin-top: 10px;
-        font-size: 2vh;
-        border-radius: 15px;
-        padding: 5px 15px;
-    }
-
-    #regForm textarea {
-        width: 80%;
-        height: 120px;
-    }
 }
