--- a/css/general.css
+++ b/css/general.css
@@ -6,19 +6,7 @@
 body {
     height: 100%;
     margin: 0;
-    padding: 3vw;
-}
-
-.container {
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    max-width: 100%;
-    max-height: 100%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
+    padding: 2vh;
 }
 
 .menu {
@@ -39,10 +27,10 @@ body {
     justify-content: center;
     font-size: 3vh;
     color: white;
-    width: 40vw;
+    width: 300px;
     height: 7vh;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 100px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
 }
 
 .mainMobileInput {
@@ -50,7 +38,7 @@ body {
     padding: 2vh 3vh;
     width: 100%;
     font-size: 3vh;
-    border-radius: 100px;
+    border-radius: 20px;
     border: none;
     margin: 5px 0;
     text-align: justify;
@@ -58,9 +46,7 @@ body {
 
 #searchBar {
     text-align: center;
-    height: 5vh;
     width: 100%;
-    border-radius: 100px;
     border: none;
     align-self: center;
     font-size: 2vh;
@@ -82,9 +68,10 @@ body {
 .bar {
     width: 80%;
     height: 5%;
+    min-height: 3px;
     background-color: black;
     opacity: 70%;
-    margin: 6px 0;
+    margin: 3px 0;
     border-radius: 20px;
 }
 
@@ -96,17 +83,12 @@ body {
 }
 
 .menuMobile {
-    height: 12vh;
+    height: auto;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-bottom: 2vh;
-}
-
-#logo {
-    width: 10vw;
-    height: 10vw;
 }
 
 #profilePic {
@@ -121,12 +103,12 @@ body {
     left: 0;
     background-color: #cbcbcb;
     height: 100vh;
-    border-radius: 0 50px 50px 0;
+    border-radius: 0 20px 20px 0;
     display: none;
     flex-direction: column;
     justify-content: start;
     overflow-x: hidden;
-    padding: 4vw 5vw;
+    padding: 4vh 5vh;
     transition: 0.1s;
     opacity: 0.9;
     z-index: 9000;
@@ -147,8 +129,8 @@ body {
 
 #drawer-pic {
     border-radius: 200px;
-    width: 18vw;
-    height: 18vw;
+    width: 18vh;
+    height: 18vh;
     margin-right: 5vw;
     border: 1px solid black;
     opacity: 1;
@@ -158,17 +140,18 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: 3vh;
-    margin: 1.5vh 0;
+    font-size: 4vh;
+    margin: 30px 0;
 }
 
 .drawer-item p {
-    font-size: 2.5vh;
+    padding: 0;
+    margin: 0;
 }
 
 .drawer-item-logo {
-    width: 10vw;
-    height: 10vw;
+    width: 50px;
+    height: 50px;
     margin-right: 1.5vh;
     opacity: 1;
 }
@@ -192,4 +175,18 @@ body {
 a, a:hover, a:visited, a:active {
     color: inherit;
     text-decoration: none;
+}
+
+@media screen and (min-aspect-ratio: 1/1) {
+    #side-menu {
+        padding: 10px 10px;
+    }
+
+    .drawer-item {
+        font-size: 20px;
+        margin: 20px 0;
+    }
+
+    .drawer-item-logo {
+    }
 }
