--- a/css/home.css
+++ b/css/home.css
@@ -28,6 +28,30 @@ body {
     border: none;
 }
 
+.filterBtn {
+    width: 100%;
+    height: 100%;
+    background-color: #EFEFEF;
+    color: black;
+    padding: 4px 0 4px 3px;
+    font-size: 1.8vh;
+    border: none;
+    cursor: pointer;
+    border-radius: 0 20px 20px 0;
+}
+
+.filterBtn > option {
+    width: 10px;
+    font-size: x-small;
+}
+
+.filterMenu {
+    width: 35%;
+    height: 100%;
+    position: relative;
+    display: inline-block;
+}
+
 #searchBar {
     border-radius: 20px 0 0 20px;
     margin: 0;
@@ -137,8 +161,13 @@ a, a:hover, a:visited, a:active {
     }
 
     .search-with-filter {
-        width: 80%;
+        width: 85%;
         margin: auto;
+    }
+
+    .filterBtn > option {
+        width: 10px;
+        font-size: 2vh;
     }
 
     .projects {
