--- a/css/myProfile.css
+++ b/css/myProfile.css
@@ -106,11 +106,16 @@ img {
     height: 100%;
     background-color: #E5E5E5;
     color: black;
-    padding: 16px;
-    font-size: 2vh;
+    padding: 16px 0 16px 2px;
+    font-size: 1.8vh;
     border: none;
     cursor: pointer;
     border-radius: 10px;
+}
+
+.filterBtn > option {
+    width: 10px;
+    font-size: x-small;
 }
 
 .filterMenu {
@@ -263,6 +268,11 @@ a, a:hover, a:visited, a:active {
 
     body {
         padding: 0 200px;
+    }
+
+    .filterBtn > option {
+        width: 10px;
+        font-size: 2vh;
     }
 
     .logo-container {
