--- a/css/home.css
+++ b/css/home.css
@@ -18,16 +18,6 @@ body {
     height: 5vh;
 }
 
-#filter-btn {
-    font-size: 2vh;
-    flex-grow: 1;
-    height: 100%;
-    padding-left: 50px;
-    padding-right: 50px;
-    border-radius: 0 20px 20px 0;
-    border: none;
-}
-
 .filterBtn {
     width: 100%;
     height: 100%;
@@ -111,7 +101,7 @@ body {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: 40px 40px 0 0;
+    border-radius: 20px 20px 0 0;
 }
 
 .project-card-title {
@@ -175,7 +165,8 @@ a, a:hover, a:visited, a:active {
     }
 
     #projectList {
-        gap: 50px;
+        gap: 3.95vw;
+        justify-content: space-between;
 
     }
 
