--- a/css/home.css
+++ b/css/home.css
@@ -30,6 +30,10 @@ body {
     border-radius: 0 20px 20px 0;
 }
 
+.filterBtn:focus {
+    outline: none;
+}
+
 .filterBtn > option {
     width: 10px;
     font-size: x-small;
@@ -59,14 +63,22 @@ body {
     justify-content: flex-start;
 }
 
+/*#projectList {*/
+/*    width: 100%;*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    flex-wrap: wrap;*/
+/*    justify-content: space-between;*/
+/*    list-style-type: none;*/
+/*    padding: 0;*/
+/*}*/
+
 #projectList {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    list-style-type: none;
     padding: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 270px);
+    gap: 1vw;
+    justify-content: space-between;
 }
 
 .project-card {
@@ -78,12 +90,20 @@ body {
     height: 43vw;
     margin: 15px 0;
     border-radius: 20px;
-    background-color: white;
+    background-color: rgba(0,0,0,0.3);
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
 }
 
+
 .project-card:hover {
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+    transform: translateY(-10px);
+    transition: transform 0.2s ease-out;
+}
+
+.project-card:not(:hover) {
+    transform: translateY(10px);
+    transition: transform 0.3s ease-out;
 }
 
 .project-card-fig {
@@ -114,6 +134,7 @@ body {
     text-align: center;
     overflow: hidden;
     text-overflow: ellipsis;
+    color: rgba(255,255,255,0.8);
 }
 
 a, a:hover, a:visited, a:active {
@@ -161,14 +182,19 @@ a, a:hover, a:visited, a:active {
     }
 
     .projects {
-
     }
 
     #projectList {
-        gap: 3.95vw;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 200px);
+        gap: 2vw;
         justify-content: space-between;
-
     }
+
+    /*#projectList::after {*/
+    /*    content: "";*/
+    /*    flex: auto;*/
+    /*}*/
 
 
     .project-card {
