--- a/css/projectUpload.css
+++ b/css/projectUpload.css
@@ -35,7 +35,6 @@ body {
 .bar {
     width: 80%;
     height: 7%;
-    background-color: black;
     margin: 6px 0;
     border-radius: 20px;
 }
@@ -69,6 +68,17 @@ body {
     cursor: pointer;
     width: 10vw;
     height: 10vw;
+}
+
+label{
+    position: relative;
+}
+
+label p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -125%);
 }
 
 .add-youtube-search {
@@ -278,6 +288,7 @@ button {
     .custom-file-upload {
         height: 100px;
         width: 100px;
+        font-size: 50px;
     }
 
     #uploadDetails {
