--- a/css/accountCreate.css
+++ b/css/accountCreate.css
@@ -1,3 +1,8 @@
+html {
+    width: 100%;
+    height: 100%;
+}
+
 #logo {
     position: absolute;
     top: 20px;
@@ -11,6 +16,7 @@ h1 {
     justify-content: center;
     font-size: 4vh;
     height: auto;
+    color: rgba(255,255,255,0.8);
 }
 
 body {
@@ -20,7 +26,6 @@ body {
     height: 100vh;
     align-items: center;
     border-radius: 20px;
-    background-color: white;
     max-width: none;
     padding-top: 15vh;
 }
