--- a/css/userLogin.css
+++ b/css/userLogin.css
@@ -1,3 +1,8 @@
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -22,6 +27,7 @@ body {
 }
 h1 {
     font-size: 4vh;
+    color: rgba(255,255,255,0.8);
 }
 #login {
     width: 90%;
@@ -35,11 +41,11 @@ a, a:visited{
     margin-top: 20px;
     font-size: 2vh;
     text-decoration: none;
-    color: black;
+    color: rgba(255,255,255,0.8);
 }
 
 a:hover {
-    color: cornflowerblue;
+    color: orange;
 }
 
 .mainMobileButton {
