--- a/css/general.css
+++ b/css/general.css
@@ -16,6 +16,19 @@ html{
     background: linear-gradient(to right, #4e4376, #2b5876); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+::-webkit-scrollbar {
+    width: 15px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(255,255,255,0.8);
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(32, 43, 56);
+}
+
 .menu {
     /*padding-left: 0.5em;*/
     /*padding-right: 0.5em;*/
