--- a/css/projectUpload.css
+++ b/css/projectUpload.css
@@ -52,8 +52,7 @@ body {
     justify-content: center;
     height: 50vw;
     width: 50vw;
-    background-color: white;
-    border: 2px solid #cbcbcb;
+    background-color: rgba(255,255,255,0.9);
     border-radius: 40px;
 }
 
@@ -63,7 +62,7 @@ body {
     justify-content: center;
     color: white;
     font-size: 7vw;
-    background-color: #E5E5E5;
+    background-color: rgba(0,0,0,0.7);
     border-radius: 200%;
     cursor: pointer;
     width: 10vw;
@@ -112,14 +111,6 @@ iframe{
     height: 100%;
 }
 
-#projectPictures {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-}
-
 h3 {
     margin-left: 5%;
     font-size: 3vh;
@@ -130,10 +121,11 @@ input[type="file"] {
 }
 
 #projectPictures .custom-file-upload {
-    background-color: #c4c4c4;
+    background-color: rgba(0,0,0,0.7);
     width: 30vw;
     height: 7vh;
     border-radius: 20px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0, 30%);
 }
 
 .hidden-input {
@@ -177,6 +169,34 @@ input[type="file"] {
     border-radius: 20px;
 }
 
+#projectPictures {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+#imgDelete {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    right: 0;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    border: 2px solid black;
+    background-color: white;
+    color: red;
+    font-size: 75px;
+}
+
+#times {
+    transform: translateY(-5%);
+}
+
 #uploadMedia {;
     margin: auto;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
@@ -198,15 +218,21 @@ input[type="file"] {
 }
 
 .uploaded-pic {
+    height: 400px;
+    aspect-ratio: auto;
     margin: 5px 2vw;
-    max-width: 90vw;
-    max-height: 60vw;
-    border-radius: 15px;
+    /*max-width: 90vw;*/
+    /*max-height: 60vw;*/
+    /*border-radius: 15px;*/
     object-fit: contain;
 }
 
-#uploaded-container {
+.uploadedPic-container {
     display: flex;
+}
+
+.uploadedPic-container #hoverDeletePic {
+    display: none;
 }
 
 #delete-image {
@@ -309,12 +335,63 @@ button {
         width: 150px;
     }
 
-    #longDescTextArea {
-        height: 300px;
+    #imgDelete {
+        display: none;
+    }
+
+    .uploadedPic-container {
+        position: relative;
+        margin: 10px 10px;
+        max-width: 100%;
+        height: 100%;
     }
 
     .uploaded-pic {
-        max-height: 30vh;
+        margin: 0;
+        height: 350px;
+        aspect-ratio: auto;
+    }
+
+    .uploadedPic-container div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 50px;
+        position: absolute;
+        overflow: hidden;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        background: black;
+        color:white;
+        opacity: 0;
+        /*border-radius: 15px;*/
+        visibility: hidden;
+        transition: visibility 0s, opacity 0.2s linear;
+    }
+
+    .uploadedPic-container:hover {
+        cursor: pointer;
+    }
+    .uploadedPic-container #hoverDeletePic {
+        display: flex;
+    }
+
+    .uploadedPic-container #trash {
+        filter: invert(100%);
+        z-index: 10000;
+        width: 50%;
+        height: 50%;
+    }
+
+    .uploadedPic-container:hover div {
+        visibility: visible;
+        opacity: 0.8;
+        height: 350px;
+        aspect-ratio: auto;
+    }
+    #longDescTextArea {
+        height: 300px;
     }
 
     #private {
