thumbnails added for profile pic

--- a/css/projectDetails.css
+++ b/css/projectDetails.css
@@ -430,6 +430,8 @@ iframe {
 
     #appOverview {
         height: 400px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     #appOverviewTop {
